@@ -101,12 +101,14 @@ import org.openmetadata.service.util.ResultList;
  * - 'thread' --- isAbout ---> 'entity' in entity_relationship
  */
 @Slf4j
+@Repository
 public class FeedRepository {
   private final CollectionDAO dao;
   private static final MessageDecorator<FeedMessage> FEED_MESSAGE_FORMATTER = new FeedMessageDecorator();
 
-  public FeedRepository(CollectionDAO dao) {
-    this.dao = dao;
+  public FeedRepository() {
+    this.dao = Entity.getCollectionDAO();
+    Entity.setFeedRepository(this);
     ResourceRegistry.addResource("feed", null, Entity.getEntityFields(Thread.class));
   }
 
@@ -115,7 +117,8 @@ public class FeedRepository {
     MENTIONS,
     FOLLOWS,
     ASSIGNED_TO,
-    ASSIGNED_BY
+    ASSIGNED_BY,
+    OWNER_OR_FOLLOWS
   }
 
   public enum PaginationType {
@@ -577,6 +580,8 @@ public class FeedRepository {
             filteredThreads = getThreadsByFollows(filter, userId, limit + 1);
           } else if (FilterType.MENTIONS.equals(filter.getFilterType())) {
             filteredThreads = getThreadsByMentions(filter, userId, limit + 1);
+          } else if (FilterType.OWNER_OR_FOLLOWS.equals(filter.getFilterType())) {
+            filteredThreads = getThreadsByOwnerOrFollows(filter, userId, limit + 1);
           } else {
             filteredThreads = getThreadsByOwner(filter, userId, limit + 1);
           }
@@ -708,7 +713,7 @@ public class FeedRepository {
     // Allow if user belongs to a team that has task assigned to it
     // Allow if user belongs to a team if owner of the resource against which task is created
     List<EntityReference> teams = user.getTeams();
-    List<String> teamNames = teams.stream().map(EntityReference::getName).collect(Collectors.toList());
+    List<String> teamNames = teams.stream().map(EntityReference::getName).toList();
     if (assignees.stream().anyMatch(assignee -> teamNames.contains(assignee.getName()))
         || teamNames.contains(owner.getName())) {
       return;
@@ -966,6 +971,14 @@ public class FeedRepository {
     List<Thread> threads = JsonUtils.readObjects(jsons, Thread.class);
     int totalCount =
         dao.feedDAO().listCountThreadsByFollows(userId, teamIds, Relationship.FOLLOWS.ordinal(), filter.getCondition());
+    return new FilteredThreads(threads, totalCount);
+  }
+
+  private FilteredThreads getThreadsByOwnerOrFollows(FeedFilter filter, UUID userId, int limit) {
+    List<String> teamIds = getTeamIds(userId);
+    List<String> jsons = dao.feedDAO().listThreadsByOwnerOrFollows(userId, teamIds, limit, filter.getCondition());
+    List<Thread> threads = JsonUtils.readObjects(jsons, Thread.class);
+    int totalCount = dao.feedDAO().listCountThreadsByOwnerOrFollows(userId, teamIds, filter.getCondition());
     return new FilteredThreads(threads, totalCount);
   }
 
